scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-.no-scrollbar::-webkit-scrollbar{
+body::-webkit-scrollbar {
+  background-color: black;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: black;
+}
+
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
